<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical"
    android:paddingLeft="@dimen/big_padding_left_right"
    android:paddingTop="@dimen/padding_top_bottom"
    android:paddingRight="@dimen/big_padding_left_right"
    android:paddingBottom="@dimen/medium_padding_left_right">

    <TextView
        android:id="@+id/main_bottom_sheet_title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/main_bottom_sheet_playnext_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_upward_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/play_next"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bottom_sheet_addtoend_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_subdirectory_arrow_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/add_to_the_end_of_queue"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_bottom_sheet_addtoplaylist_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_playlist_add_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/add_to_playlist"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>