<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player_bar_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/player_bar_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/player_bar_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="45"
            app:indicatorColor="?attr/colorAccent"
            app:trackColor="#3E3E3E"
            app:trackCornerRadius="6dp"
            app:trackThickness="2dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/small_padding_left_right"
            android:paddingRight="@dimen/small_padding_left_right">

            <ImageView
                android:id="@+id/player_bar_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/outline_music_note_24" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/player_bar_prev_button"
                app:layout_constraintStart_toEndOf="@id/player_bar_image"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/player_bar_audio_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/player_bar_channel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/channel"
                    android:textAlignment="textStart"
                    android:textColor="#989898"
                    android:textSize="12sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/player_bar_next_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="?attr/colorAccent"
                android:contentDescription="@string/play_next_audio"
                android:src="@drawable/round_skip_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/player_bar_play_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="?attr/colorAccent"
                android:contentDescription="@string/play_or_pause_audio"
                android:src="@drawable/round_play_arrow_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/player_bar_next_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/player_bar_prev_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="?attr/colorAccent"
                android:contentDescription="@string/play_previous_audio"
                android:rotation="180"
                android:src="@drawable/round_skip_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/player_bar_play_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>
